about part done

--- a/index.html
+++ b/index.html
@@ -262,6 +262,39 @@
     <!-- ===============================
                Feature Part End
      ==================================== -->
+    <!-- ===============================
+               About Part start
+     ==================================== -->
+    <section class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2 >What our clients say about us</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p>
+
+                </div>
+                <div class="col-lg-8">
+                    <h4>"The best agency we’ve worked with so far. They understand our product and are able to add new features with a great focus."</h4>
+                    <div class="profile">
+                        <div>
+                            <img src="./images/profile.png" alt="">
+                        </div>
+                        <div>
+                            <h5>Jenny Wilson</h5>
+                            <p>Vice President</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- ===============================
+               About Part End
+     ==================================== -->
 
 
     <script src="./js/bootstrap.bundle.min.js"></script>
