contact part done

--- a/index.html
+++ b/index.html
@@ -295,6 +295,32 @@
     <!-- ===============================
                About Part End
      ==================================== -->
+    <!-- ===============================
+               Contact Part start
+     ==================================== -->
+
+     <section class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="./images/contact.png" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <div class="contact-content">
+                        <h6>Send inquiry</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                        <input type="text" placeholder="Your Name">
+                        <input type="email" placeholder="Email">
+                        <input type="url" placeholder="Paste your Figma design URL">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- ===============================
+               Contact Part End
+     ==================================== -->
 
 
     <script src="./js/bootstrap.bundle.min.js"></script>
