--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                     <a class="viewbutton" href="#">View our work</a>
                     <a class="pricingbutton" href="">View Pricing <i
-                            class="fa-solid fa-arrow-right-long pricing-icon"></i></a>
+                            class="fa-solid fa-arrow-right-long pricing-icon"></i>
+                        </a>
                 </div>
                 <div class="col-lg-6">
                     <img src="./images/banner.png" alt="">
@@ -302,16 +303,27 @@
      <section class="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 contact-image">
                     <img src="./images/contact.png" alt="">
+                    <div class="overly">
+                        <h2>Building stellar websites for early startups</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="contact-content">
                         <h6>Send inquiry</h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                        <input type="text" placeholder="Your Name">
-                        <input type="email" placeholder="Email">
-                        <input type="url" placeholder="Paste your Figma design URL">
+                        <form >
+                             <input type="text" placeholder="Your Name">
+                             <input type="email" placeholder="Email">
+                             <input type="url" placeholder="Paste your Figma design URL">
+                             <button type="submit">Send an Inquiry</button>
+                        </form>
+                          <a class="pricingbutton " href="">Get in touch with us 
+                            <i class="fa-solid fa-arrow-right-long pricing-icon"></i>
+                        </a>
+                        
 
                     </div>
                 </div>
