full project done

--- a/index.html
+++ b/index.html
@@ -501,6 +501,80 @@
     <!-- ===============================
                Blog Part End
      ==================================== -->
+    <!-- ===============================
+               Footer Part start
+     ==================================== -->
+     <footer class="first-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 position-relative">
+                    <img src="./images/logo.png" alt="">
+                    <p>We are always open to discuss your project and improve your online presence.</p>
+                    <div class="footer-contact">
+                        <div>
+                            <h5>Email me at</h5>
+                            <h6>contact@website.com</h6>
+                        </div>
+                        <div>
+                            <h5>Call us</h5>
+                            <h6>0927 6277 28525</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <h2>Lets Talk!</h2>
+                    <p class="second-pera">We are always open to discuss your project, improve your online presence and help with your UX/UI design challenges.</p>
+
+                    <ul>
+                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+                       
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+     </footer>
+     <footer class="second-footer">
+        <div class="container">
+         <div class="box">
+             <div><p>Copyright 2022, Finsweet.com</p></div>
+            <div>
+               <ul class="">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+
+
+                </ul>
+            </div>
+
+         </div>
+
+        </div>
+
+     </footer>
+    <!-- ===============================
+               Footer Part End
+     ==================================== -->
 
 
     <script src="./js/bootstrap.bundle.min.js"></script>
